# Educsosys_Claude_Code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deepeval-tests.yml
educosys_claude/: config.yaml  educosys_mcp_servers.json  main.py
educosys_claude/agent/: factory.py  orchestrator.py  tools.py
educosys_claude/cache/: semantic_cache.py
educosys_claude/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py  watcher.py
educosys_claude/llm/: factory.py
educosys_claude/mcp/: educosys_mcp_client.py
educosys_claude/memory/: session.py
educosys_claude/skills/: registry.py  skill_tools.py
educosys_claude/tasks/: approval.py  executor.py  orchestrator.py  planner.py  recovery.py  status.py  task_store.py
educosys_claude/tools/: filesystem_tools.py  terminal_tools.py
tests/evals/: conftest.py  dataset_codebase_agent.json  dataset_rag.json  dataset_task_planning_agent.json  metrics.py  test_codebase_agent.py  test_rag_pipeline.py  test_task_planning_agent.py
tests/evals/fixtures/sample_project/: README.md
tests/evals/fixtures/sample_project/expense_tracker/: budgets.py  cli.py  models.py  reports.py  store.py
